//
// Copyright 2022 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT license.

syntax = "proto3";

package psi;

option cc_generic_services = true;

enum FileType {
  FILE_TYPE_UNKNOWN = 0;
  FILE_TYPE_CSV = 1;
}

enum ErrorCode {
  // Placeholder for proto3 default value, do not use it
  UNKNOWN = 0;

  // 001-099 for general code

  OK = 1;
  UNEXPECTED_ERROR = 2;
  INVALID_ARGUMENT = 3;
  NETWORK_ERROR = 4;
  // Some requested entity (e.g., file or directory) was not found.
  NOT_FOUND = 5;
  NOT_IMPLEMENTED = 6;
  LOGIC_ERROR = 7;
  SERIALIZE_FAILED = 8;
  DESERIALIZE_FAILED = 9;
  IO_ERROR = 10;
  NOT_READY = 11;
}

message Header {
  map<string, string> data = 1;
}

message Status {
  ErrorCode err_code = 1;
  string msg = 2;
}

message InputConfig {
  string file_name = 1;
  // if not set, default is csv
  FileType file_type = 2;

  repeated string key_column_names = 3;
  repeated string value_column_names = 4;
}

message OutputConfig {
  string file_name = 1;
  // if not set, default is csv
  FileType file_type = 2;
}

enum KeyWordPirBackend {
  BACKEND_UNKNOWN = 0;
  BACKEND_APSI = 1;
  BACKEND_SEAL_PIR = 2;
}